[metadata]
name = source-inspector
license = Apache-2.0
version = 0.7.1

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = source-inspector
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/aboutcode-org/source-inspector

author = nexB. Inc. and others
author_email = info@aboutcode.org

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities

keywords =
    utilities

license_files =
    apache-2.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst
    CODE_OF_CONDUCT.rst

[options]
package_dir =
    =src
packages = find:
include_package_data = true
zip_safe = false
python_requires = >=3.10

install_requires =
    scancode-toolkit
    plugincode
    commoncode
    typecode
    tree-sitter==0.23.2
    tree-sitter-bash==0.21.0
    tree-sitter-c==0.21.1
    tree-sitter-cpp==0.22.0
    tree-sitter-c-sharp==0.23.1
    tree-sitter-go==0.21.0
    tree-sitter-java==0.21.0
    tree-sitter-javascript==0.21.2
    tree-sitter-objc==3.0.2
    tree-sitter-python==0.21.0
    tree-sitter-rust==0.21.2
    tree-sitter-swift==0.0.1
    pygments

[options.packages.find]
where = src


[options.entry_points]
scancode_scan =
    source_symbol = source_inspector.symbols_ctags:CtagsSymbolScannerPlugin
    source_string = source_inspector.strings_xgettext:XgettextStringScannerPlugin
    treesitter_symbol_and_string = source_inspector.symbols_tree_sitter:TreeSitterSymbolAndStringScannerPlugin
    pygments_symbol_and_string = source_inspector.symbols_pygments:PygmentsSymbolsAndStringScannerPlugin

[options.extras_require]
dev =
    pytest >= 7.0.1
    pytest-xdist >= 2
    aboutcode-toolkit >= 7.0.2
    twine
    ruff
    Sphinx>=5.0.2
    sphinx-rtd-theme>=1.0.0
    sphinx-reredirects >= 0.1.2
    doc8>=0.11.2
    sphinx-autobuild
    sphinx-rtd-dark-mode>=1.3.0
    sphinx-copybutton

